Compiler/src/main/java/Testing/Tests/SemanticTests/failing/heritanceCycle.ru
struct Pepe : Juan {}

impl Pepe{
.(){}}

struct Juan : Alberto{}

impl Juan{
.(){}}

struct Alberto : Pepe{}

impl Alberto{
.(){}}

start{}